2009-08-05  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientRuntimeChannel.cs : fix 2.1 build.

2009-08-05  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientRuntimeChannel.cs : actually CallbackInstance is set and
	  should be available.

2009-08-05  Atsushi Enomoto  <atsushi@ximian.com>

	* DuplexChannelFactory.cs, ClientProxyGenerator.cs, ClientBase.cs,
	  ChannelFactory_1.cs, DuplexClientBase.cs :
	  create IDuplexContextChannel from ClientBase if required.

2009-08-05  Atsushi Enomoto  <atsushi@ximian.com>

	* DuplexClientRuntimeChannel.cs : new proxy base channel.

2009-08-05  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceRuntimeChannel.cs : it should implement IServiceChannel,
	  not IClientChannel.

2009-08-04  Atsushi Enomoto  <atsushi@ximian.com>

	* OperationContext.cs : GetCallbackChannel<T>() should just return
	  channel (which should also implement T, which must be callback
	  type).

2009-08-04  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceBehaviorAttribute.cs : cosmetic spelling fix.

2009-07-31  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientRuntimeChannel.cs, ClientProxyGenerator.cs, ClientBase.cs,
	  ChannelFactory_1.cs : now proxies take remote address and via uri
	  which could be optionally specified and use it whenever required.

2009-07-30  Atsushi Enomoto  <atsushi@ximian.com>

	* PeerNode.cs : remove TCP listener creator.
	  It is now in PeerDuplexChannel.

2009-07-28  Atsushi Enomoto  <atsushi@ximian.com>

	* TransactionFlowAttribute.cs : new file.

2009-07-28  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelFactory.cs : implement some remaining members.
	  Remove null argument check and make setter optional.

2009-07-24  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelFactory.cs: add some null checks.

2009-07-17  Atsushi Enomoto  <atsushi@ximian.com>

	* NetTcpBinding.cs : a couple of members should be passed to
	  appropriate binding element.

2009-07-14  Atsushi Enomoto  <atsushi@ximian.com>
