@@ -1,3 +1,8 @@
+2009-08-06  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* ClientRuntimeChannel.cs : eliminate dependency on ChannelFactory,
+	  which will block using it for callback instances.
+
 2009-08-05  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* ClientRuntimeChannel.cs : fix 2.1 build.
